--- a/KnowledgeAccountingSystem/KnowledgeAccountingSystem.BLL/KnowledgeAccountingSystem.BLL.csproj
+++ b/KnowledgeAccountingSystem/KnowledgeAccountingSystem.BLL/KnowledgeAccountingSystem.BLL.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Dependency Injection\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="DTO\" />
+    <Folder Include="Mapper\" />
+    <Folder Include="Validation\" />
+    <Folder Include="Services\" />
+    <Folder Include="ValidationExtensions\" />
+  </ItemGroup>
+
 </Project>
