Create DI class and add connectionString

--- a/KnowledgeAccountingSystem/KnowledgeAccountingSystem.BLL/KnowledgeAccountingSystem.BLL.csproj
+++ b/KnowledgeAccountingSystem/KnowledgeAccountingSystem.BLL/KnowledgeAccountingSystem.BLL.csproj
@@ -5,13 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dependency Injection\" />
     <Folder Include="Interfaces\" />
     <Folder Include="DTO\" />
     <Folder Include="Mapper\" />
     <Folder Include="Validation\" />
     <Folder Include="Services\" />
     <Folder Include="ValidationExtensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KnowledgeAccountingSystem.DAL\KnowledgeAccountingSystem.DAL.csproj" />
   </ItemGroup>
 
 </Project>
