--- a/KnowledgeAccountingSystem/KnowledgeAccountingSystem/KnowledgeAccountingSystem.csproj
+++ b/KnowledgeAccountingSystem/KnowledgeAccountingSystem/KnowledgeAccountingSystem.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KnowledgeAccountingSystem.BLL\KnowledgeAccountingSystem.BLL.csproj" />
+  </ItemGroup>
+
 </Project>
