--- a/KnowledgeAccountingSystem/KnowledgeAccountingSystem/appsettings.json
+++ b/KnowledgeAccountingSystem/KnowledgeAccountingSystem/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=(localdb)\\mssqllocaldb;Database=AccSysDb;Trusted_Connection=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
