--- a/KnowledgeAccountingSystem/KnowledgeAccountingSystem.BLL/KnowledgeAccountingSystem.BLL.csproj
+++ b/KnowledgeAccountingSystem/KnowledgeAccountingSystem.BLL/KnowledgeAccountingSystem.BLL.csproj
@@ -6,10 +6,13 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Mapper\" />
     <Folder Include="Validation\" />
     <Folder Include="Services\" />
     <Folder Include="ValidationExtensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
   </ItemGroup>
 
   <ItemGroup>
