--- a/KnowledgeAccountingSystem/KnowledgeAccountingSystem.BLL/KnowledgeAccountingSystem.BLL.csproj
+++ b/KnowledgeAccountingSystem/KnowledgeAccountingSystem.BLL/KnowledgeAccountingSystem.BLL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
