--- a/KnowledgeAccountingSystem/KnowledgeAccountingSystem/appsettings.json
+++ b/KnowledgeAccountingSystem/KnowledgeAccountingSystem/appsettings.json
@@ -10,5 +10,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JWT": {
+    "ValidAudience": "http://localhost:5001",
+    "ValidIssuer": "CLIENT",
+    "Secret": "gfh34FGtgd501A"
+  },
   "AllowedHosts": "*"
 }
