--- a/KnowledgeAccountingSystem/KnowledgeAccountingSystem/appsettings.json
+++ b/KnowledgeAccountingSystem/KnowledgeAccountingSystem/appsettings.json
@@ -13,7 +13,8 @@
   "JWT": {
     "ValidAudience": "http://localhost:5001",
     "ValidIssuer": "CLIENT",
-    "Secret": "gfh34FGtgd501A"
+    "Secret": "gfh34FGtgd501A",
+    "TokenLifeTime" : "10000"
   },
   "AllowedHosts": "*"
 }
